crear matricula y periodo

--- a/src/main/resources/templates/layout/Plantilla2.html
+++ b/src/main/resources/templates/layout/Plantilla2.html
@@ -30,9 +30,9 @@
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="configuracionDropdown">
                             <li><a class="dropdown-item" href="/cursos/listado">Insertar Nuevo Curso</a></li>
-                            <li><a class="dropdown-item" href="/#">Insertar Nuevo Periodo</a></li>
+                            <li><a class="dropdown-item" href="/periodos/listado">Insertar Nuevo Periodo</a></li>
                             <li><a class="dropdown-item" href="/estudiantes/listado">Insertar Estudiante</a></li>
-                            <li><a class="dropdown-item" href="/#">Insertar Matricula</a></li>
+                            <li><a class="dropdown-item" href="/matriculas/listado">Insertar Matricula</a></li>
                         </ul>
                     </div>
 
