--- a/src/main/resources/templates/calificaciones/create.html
+++ b/src/main/resources/templates/calificaciones/create.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Crear/Editar Calificación</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
     <h1 th:text="${#strings.equals(calificacion.id, null) ? 'Crear Calificación' : 'Editar Calificación'}"></h1>
