Se agrega el registro de profesor con roll de TEACH y el logueo con el Roll

--- a/src/main/resources/templates/login/fragmentoLogin.html
+++ b/src/main/resources/templates/login/fragmentoLogin.html
@@ -13,8 +13,8 @@
                 <h1 class="h3 mb-3 fw-normal">Por favor inicia sesión</h1>
 
                 <div class="form-floating">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Correo electrónico</label>
+                    <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Usuario</label>
                 </div>
                 <div class="form-floating">
                     <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
@@ -27,6 +27,11 @@
                         Recuérdame
                     </label>
                 </div>
+                <button class="btn btn-success" type="submit">
+                    <span class="btn">
+                        <i class="fas fa-sign-in-alt"></i>Iniciar sesion
+                    </span>
+                </button>
                 <button class="btn btn-primary w-100 py-2" type="button" onclick="window.location.href = 'estudiantes/listado''">Iniciar sesión</button>
                 <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2024</p>
             </form>
