--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -26,8 +26,8 @@
                     <h1 class="h3 mb-3 fw-normal">Por favor inicia sesión</h1>
 
                     <div class="form-floating">
-                        <input type="text" class="form-control" name="username" id="username" placeholder="name@example.com">
-                        <label for="floatingInput">Correo electrónico</label>
+                        <input type="text" class="form-control" name="username" id="username" placeholder="username">
+                        <label for="floatingInput">Usuario</label>
                     </div>
                     <div class="form-floating">
                         <input type="password" class="form-control" name="password" id="password" placeholder="Password">
@@ -41,7 +41,11 @@
                             Recuérdame
                         </label>
                     </div>
-
+                    <button class="btn btn-success" type="submit">
+                        <span class="btn">
+                            <i class="fas fa-sign-in-alt"></i>Iniciar sesion
+                        </span>
+                    </button>
                     <button class="btn btn-primary w-100 py-2" type="submit" onclick="window.location.href = 'estudiantes/listado'">Iniciar sesión</button>
 
                     <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2024</p>
