--- a/src/main/resources/templates/planes/fragmentos.html
+++ b/src/main/resources/templates/planes/fragmentos.html
@@ -131,6 +131,9 @@
                 <!-- Formulario de suscripción -->
                 <div class="col-md-7 col-lg-8">
                     <h4 class="mb-3">Detalles del Profesor</h4>
+                    <div th:if="${error}" class="alert alert-danger" role="alert">
+                        <p th:text="${error}">Error message here</p>
+                    </div>
                     <form th:action="@{/suscripcion}" th:object="${profesor}" method="post" class="needs-validation" novalidate>
                         <div class="row g-3">
                             <div class="col-sm-6">
@@ -182,13 +185,6 @@
                                     Usuario es requerido.
                                 </div>
                             </div>
-                            <div class="col-sm-6">
-                                <label for="clave" class="form-label">Clave</label>
-                                <input type="password" class="form-control" id="clave" th:field="*{clave}" required>
-                                <div class="invalid-feedback">
-                                    Clave es requerida.
-                                </div>
-                            </div>
                         </div>
                         <hr class="my-4">
                         <input type="hidden" name="planId" th:value="${selectedPlan.id}" />
@@ -197,7 +193,80 @@
                 </div>
             </div>
         </main>
-
+        
+        <!-- Fragmegnto para activar contraseña -->
+        <main th:fragment="mainActivarCuenta" class="container-lg py-4 mx-auto">
+            <div class="py-5 text-center">
+                <h2>Activar Cuenta</h2>
+                <p class="lead">Ingrese una nueva contraseña y actualice sus datos si es necesario.</p>
+            </div>
+            <div class="row g-5">
+                <div class="col-md-12">
+                    <h4 class="mb-3">Detalles del Profesor</h4>
+                    <form th:action="@{/activar}" th:object="${profesor}" method="post" class="needs-validation" novalidate>
+                        <input type="hidden" name="id" th:field="*{id}"/>
+                        <input type="hidden" name="rol" th:field="*{rol}"/>
+                        <input type="hidden" name="id" th:field="*{persona.id}"/>
+                        <input type="hidden" name="telefono" th:field="*{persona.telefono}"/>
+                        <input type="hidden" name="identificacion" th:field="*{persona.identificacion}"/>
+                        <div class="row g-3">
+                            <div class="col-sm-6">
+                                <label for="nombre" class="form-label">Nombre</label>
+                                <input type="text" class="form-control" id="nombre" name="persona.nombre" th:field="*{persona.nombre}" required>
+                                <div class="invalid-feedback">
+                                    Nombre es requerido.
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="apellido1" class="form-label">Primer Apellido</label>
+                                <input type="text" class="form-control" id="apellido1" name="persona.apellido1" th:field="*{persona.apellido1}" required>
+                                <div class="invalid-feedback">
+                                    Primer Apellido es requerido.
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="apellido2" class="form-label">Segundo Apellido</label>
+                                <input type="text" class="form-control" id="apellido2" name="persona.apellido2" th:field="*{persona.apellido2}" required>
+                                <div class="invalid-feedback">
+                                    Segundo Apellido es requerido.
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="correo" class="form-label">Correo</label>
+                                <input type="email" class="form-control" id="correo" name="persona.correo" th:field="*{persona.correo}" readonly>
+                                <div class="invalid-feedback">
+                                    Correo es requerido.
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="usuario" class="form-label">Usuario</label>
+                                <input type="text" class="form-control" id="usuario" th:field="*{usuario}" readonly>
+                                <div class="invalid-feedback">
+                                    Usuario es requerido.
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="nuevaClave" class="form-label">Nueva Contraseña</label>
+                                <input type="password" class="form-control" id="nuevaClave" th:field="*{clave}" required>
+                                <div class="invalid-feedback">
+                                    Nueva Contraseña es requerida.
+                                </div>
+                            </div>
+                        </div>
+                        <hr class="my-4">
+                        <button class="w-100 btn btn-primary btn-lg" type="submit">Activar Cuenta</button>
+                    </form>
+                </div>
+            </div>
+        </main>
+        
+        <!-- Landing de pendiente de activar -->
+        <main th:fragment="mainPendienteActivar" class="container-lg py-4 mx-auto">
+            <div class="py-5 text-center">
+                <h2>Registro Pendiente de Activación</h2>
+                <p class="lead">Hemos enviado un enlace a su correo electrónico para finalizar su registro. Por favor, revise su bandeja de entrada y siga las instrucciones para activar su cuenta.</p>
+            </div>
+        </main>
 
     </body>
 </html>
