Creación de Asistencia, listado de cursos y listado de estudiantes

--- a/src/main/resources/templates/curso/fragmentos.html
+++ b/src/main/resources/templates/curso/fragmentos.html
@@ -215,7 +215,7 @@
                                 </select>
 
                                 <button type="submit" class="btn btn-primary mt-2">Calificar</button>
-                                <button type="submit" class="btn btn-primary mt-2">Asistencia</button>
+                                <a href="/asistencia/curso" class="btn btn-primary mt-2">Asistencia</a>
                             </div>
 
                             <div th:if="${cursos == null || cursos.isEmpty()}">
