--- a/src/main/resources/templates/layout/Plantilla2.html
+++ b/src/main/resources/templates/layout/Plantilla2.html
@@ -22,7 +22,8 @@
 
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/cursos/listado2">Gestiones de Clases</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" >Gestión de Estudiantes</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/estudiantes/listado" >Gestión de Estudiantes</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/asistencia/curso" >Asistencia</a>
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="configuracionDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             Configuración
